--- a/Design/authorize.html
+++ b/Design/authorize.html
@@ -7,13 +7,23 @@
 </head>
 <body id="cover_body">
 	<div id="cover_main" style="width: 0; height: 0">
-		<form action="Masters.php" method="post">
-			<input type="text" name="log" style="margin-bottom: 10px; border-radius: 4px; border-style: none; height: 33px; width: 230px;"><br>
-			<input type="text" name="pas" style="margin-bottom: 10px; border-radius: 4px; border-style: none; height: 33px; width: 230px;"><br>
-			<input id="Start_btn" type="submit" name="" value="Войти" >
+		<!-- Форма -->
+		<form id="form" action="Masters.php" method="post">
+			<!-- Сообщение об ощибке ввода -->
+			<div id="notify-cont"><div id="notify" style="display: none;"></div></div><br>
+			<!-- Комбобокс с группами -->
+			<select name="group" style="margin-bottom: 10px; border-radius: 4px; border-style: none; height: 33px; width: 230px;">
+				<option>Группа 1</option>
+				<option>Группа 2</option>
+				<option>Группа 3</option>
+				<option>Группа 4</option>
+				<option>...</option>
+			</select><br>
+			<!-- Поле для ввода кода -->
+			<input id="code-field" type="text" name="code" style="margin-bottom: 10px; border-radius: 4px; border-style: none; height: 33px; width: 230px;" pattern="[а-яА-я]{1}[0-9]{4}"><br>
+			<!-- Кнопка отправки данных -->
+			<input id="Start_btn" type="submit" name="" value="Войти">
 		</form>
-		
-		
 	</div>
 <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"
 integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
